--- a/styles.css
+++ b/styles.css
@@ -3,55 +3,55 @@
 https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
 */
 
-html {
+ html {
     box-sizing: border-box;
-}
-
-*, *::before, *::after {
+  }
+  
+  *, *::before, *::after {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-}
-
-:root {
+  }
+  
+  :root {
     --pomodoro: hsl(223, 25%, 40%);
     --shortBreak: hsl(48, 23%, 40%);
     --longBreak: hsl(105, 16%, 40%);
-}
-
-body {
+  }
+  
+  body {
     background-color: var(--pomodoro);
     transition: background-color 1s ease;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     user-select: none;
-}
-
-progress {
+  }
+  
+  progress {
     border-radius: 2px;
     width: 100%;
     height: 12px;
     position: fixed;
     top: 0;
-}
-
-progress::-webkit-progress-bar {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-progress::-webkit-progress-value {
+  }
+  
+  progress::-webkit-progress-bar {
+   background-color: rgba(0, 0, 0, 0.1);;
+  }
+  
+  progress::-webkit-progress-value {
     background-color: #fff;
-}
-
-.timer {
+  }
+  
+  .timer {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
     text-align: center;
-}
-
-.clock {
+  }
+  
+  .clock {
     margin-top: 50px;
     margin-bottom: 30px;
     font-size: 15rem;
@@ -59,9 +59,9 @@ progress::-webkit-progress-value {
     display: flex;
     align-items: center;
     font-family: arial, sans-serif;
-}
-
-.mode-button {
+  }
+  
+  .mode-button {
     font-size: 16px;
     height: 28px;
     cursor: pointer;
@@ -73,13 +73,13 @@ progress::-webkit-progress-value {
     border-radius: 4px;
     padding: 2px 12px;
     background: none;
-}
-
-.mode-button-active {
+  }
+  
+  .mode-button.active {
     border-color: #fff;
-}
-
-.main-button {
+  }
+  
+  .main-button {
     cursor: pointer;
     box-shadow: rgb(235, 235, 235) 0px 6px 0px;
     font-size: 22px;
@@ -95,24 +95,24 @@ progress::-webkit-progress-value {
     padding: 0px 12px;
     border-radius: 4px;
     transition: color 0.5s ease-in-out 0s;
-}
-
-button:focus, button:active {
+  }
+  
+  button:focus, button:active {
     outline: none;
-}
-
-.main-button.active {
+  }
+  
+  .main-button.active {
     transform: translateY(6px);
     box-shadow: none;
     outline: none;
-}
-
-.hidden {
+  }
+  
+  .hidden {
     display: none;
-}
-
-@media screen and (max-width: 550px) {
+  }
+  
+  @media screen and (max-width: 550px) {
     .clock {
-        font-size: 8rem;
+      font-size: 8rem;
     }
-}
+  }
