--- a/styles.css
+++ b/styles.css
@@ -3,89 +3,167 @@
 https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
 */
 
- html {
+html {
     box-sizing: border-box;
-  }
-  
-  *, *::before, *::after {
+}
+
+*, *::before, *::after {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-  }
-  
-  :root {
-    --pomodoro: hsl(223, 25%, 40%);
-    --shortBreak: hsl(48, 23%, 40%);
-    --longBreak: hsl(105, 16%, 40%);
-  }
-  
-  body {
+}
+
+:root {
+    --pomodoro: #5ebe44;
+    --shortBreak: #0da955;
+    --longBreak: #5ec992;
+}
+
+body {
     background-color: var(--pomodoro);
     transition: background-color 1s ease;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
     user-select: none;
-  }
-  
-  progress {
-    border-radius: 2px;
-    width: 100%;
-    height: 12px;
-    position: fixed;
-    top: 0;
-  }
-  
-  progress::-webkit-progress-bar {
-   background-color: rgba(0, 0, 0, 0.1);;
-  }
-  
-  progress::-webkit-progress-value {
-    background-color: #fff;
-  }
-  
-  .timer {
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background-color: black;
+}
+
+.logo {
+    border-radius: 4px;
+    padding: 4px;
+    background-color: #4a4a48;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.timers {
+    border-radius: 4px;
+    padding: 4px;
+    background-color: #4a4a48;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.flash-cards{
+    border-radius: 4px;
+    padding: 4px;
+    background-color: #4a4a48;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.notes {
+    border-radius: 4px;
+    padding: 4px;
+    background-color: #4a4a48;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.login {
+    margin-left: 300px;
+    margin-right: 20px;
+    border-radius: 4px;
+    padding: 4px;
+    background-color: black;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.register {
+    border-radius: 4px;
+    padding: 4px;
+    background-color: #4a4a48;
+    color: var(--pomodoro);
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: none;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.timer {
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
     text-align: center;
-  }
-  
-  .clock {
+}
+
+.clock {
     margin-top: 50px;
     margin-bottom: 30px;
-    font-size: 15rem;
+    font-size: 10rem;
     line-height: 1;
     display: flex;
     align-items: center;
     font-family: arial, sans-serif;
-  }
-  
-  .mode-button {
+}
+
+.mode-button {
     font-size: 16px;
     height: 28px;
     cursor: pointer;
     box-shadow: none;
-    font-weight: 300;
-    color: #fff;
-    border: 1px solid transparent;
+    font-weight: bold;
+    color: black;
+    border: 2px solid transparent;
     margin: 0px;
     border-radius: 4px;
     padding: 2px 12px;
     background: none;
-  }
+}
+
+.mode-button.active {
+    border-color: black;
+}
   
-  .mode-button.active {
-    border-color: #fff;
-  }
-  
-  .main-button {
+.main-button {
     cursor: pointer;
     box-shadow: rgb(235, 235, 235) 0px 6px 0px;
     font-size: 22px;
     height: 55px;
     text-transform: uppercase;
-    color: hsl(175, 26%, 41%);
+    color: black;
     font-weight: bold;
     width: 200px;
     background-color: white;
@@ -95,24 +173,178 @@ https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-pract
     padding: 0px 12px;
     border-radius: 4px;
     transition: color 0.5s ease-in-out 0s;
-  }
-  
-  button:focus, button:active {
+}
+
+button:focus, button:active {
     outline: none;
-  }
+}
   
-  .main-button.active {
+.main-button.active {
     transform: translateY(6px);
     box-shadow: none;
     outline: none;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  @media screen and (max-width: 550px) {
+}
+
+/****** Login/Registration Pages ******/
+
+.login-portion {
+    margin-top: 10px;
+}
+
+.login-header, .register-header {
+    text-align: center;
+    font-size: 36px;
+    height: 28px;
+    box-shadow: none;
+    font-weight: bold;
+    color: black;
+    border: 2px solid transparent;
+    margin: 0px;
+    border-radius: 4px;
+    padding: 2px 12px;
+    background: none;
+}
+
+.login-container, .register-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.login-email, .login-password, .first-name, .last-name, .user-name, .email, 
+.password, .password-confirm {
+    font-weight: bold;
+}
+
+.login-btn-container, .submit-register-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#login-btn, .register-button {
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    background-color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+/****** Flashcards ******/
+
+.flashcard-page {
+    background: var(--pomodoro);
+}
+
+.flash-btns {
+    padding: 8px;
+    outline: none;
+    cursor: pointer;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: whitesmoke;
+}
+
+.flash-btns:hover {
+    background-color: rgba(0, 0, 0 , 0.1);
+}
+
+.flashcards-container {
+    width: 95%;
+    margin: auto;
+}
+
+.flashcard-nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: auto;
+    padding: 20px 0;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 10px;
+    background-color: var(--pomodoro);
+}
+
+.create-box {
+    width: 380px;
+    margin: auto;
+    padding: 20px;
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0 , 0.5);
+}
+
+.create-box textarea {
+    width: 100%;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    box-shadow: 0 2px 4px rgba(0, 0, 0 , 0.5);
+}
+
+.create-box button {
+    width: fit-content;
+}
+
+.flashcards_ {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+    margin-top: 10px;
+    padding: 0 10px;
+}
+
+.flashcard {
+    width: 370px;
+    height: 200px;
+    word-wrap: break-word;
+    margin: 10px;
+    background-color: white;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0 , 0.5);
+}
+
+.flashcard h2 {
+    font-size: 1rem;
+}
+
+
+/****** Media types and devices ******/
+
+@media screen and (max-width: 550px) {
     .clock {
       font-size: 8rem;
     }
-  }
+}
+
+@media(max-width:768px) {
+    .flashcard {
+        margin: auto;
+    }
+
+    .flashcard {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media(max-width:480px) {
+    .flashcard-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .create-button {
+        width: 100%;
+    }
+
+    .flashcard {
+        width: 100%;
+    }
+}
